# chip8.c

./: CMakeLists.txt  LICENSE  README.md  main.c
src/: CMakeLists.txt  main.c  platform.h
